# EmscriptenWebsite

./: .gitignore  CMakeLists.txt  CppWeb.sln  CppWebMake.vcxproj  CppWebMake.vcxproj.filters
include/: CppWeb.h
publics/: emc.js  index.css  index.html
scripts/: build.bat  build.sh
src/: CMakeLists.txt  CppWeb.cpp
